--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,50 +1,85 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,700);
 
-#contents {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	width: 90%;
-}
-
-#content {
-	display: block;
-    padding-bottom: 18px;
-	max-width: 100%;
-}
-
-#content.logo {
-/*    margin-top: 80px;*/
-/*    margin-bottom: 80px;*/
-/*    margin-right: 20%;*/
-	width: 80%;
-}
-
-#content.footer {
-	display: block;
-	position: relative;
-	margin-top: 18px;
-	min-height: 120px;
-	background-color: RGBA(64, 64, 64, 0.9);
-}
-
-#copyrightnotice {
-	width: 100%;
-	position: absolute;
-	bottom: 0;
-	text-align: center;
-	color: #fff;
-}
-
-img {
-
-}
-
 body {
 	background-color: #888;
 	background-image: url('../images/background.jpg');
 	background-repeat: no-repeat;
     background-attachment: fixed;
-	background-position: center;
+	background-position: top center;
 	background-size: 100%;
+	margin-left: 0px;
+	margin-right: 0px;
+	display: inline;
+}
+
+:lang(ja) {
+	display: none;
+}
+
+.contents {
+	position: relative;
+}
+
+.section {
+	position: relative;
+	display: block;
+	padding: 0px;
+    padding-bottom: 18px;
+	margin-left: auto;
+	margin-right: auto;
+	width: 90%;
+	max-width: 780px;
+}
+
+.logo {
+	position: absolute;
+	width: 40%;
+	min-width: 320px;
+	max-width: 380px;
+	bottom: 18px;
+	left:0;
+	right:0;
+	margin: auto;
+}
+
+.intro {
+}
+
+.footer {
+	position: relative;
+	width: 100%;
+	height: 80px;
+	background-color: RGBA(64, 64, 64, 0.9);
+}
+
+.textbox {
+	text-align: left;
+	background-color: RGBA(64, 64, 64, 0.9);
+	color: #fff;
+}
+
+.copyrightnotice {
+	width: 100%;
+	position: absolute;
+	bottom: 0;
+	text-align: center;
+}
+
+#twitter-widget-0 {
+	display: inline-block;
+	top: 0px;
+	left: 0px;
+	margin-top: 18px;
+	margin-left: 0px;
+	margin-right: -0px;
+	width: 60%;
+}
+
+#twitter-widget-description {
+	display: inline-block;
+	float: right;
+	margin-top: 18px;
+	margin-right: 0px;
+	width: 30%;
+	height: auto;
 }
